# MALINT

./: README.md  binary_detection.sh  malicious_intent_analysis.sh  multilabel_multiclass_classification.sh  pyproject.toml  run_icot_one_detailed_multistep.sh  simple_detection.sh
data/CoAID/: test.csv  train.csv  validation.csv
data/ECTF/: test.csv  train.csv  validation.csv
data/EUDisinfo/: original.csv  test.csv
data/ISOTFakeNews/: test.csv
data/MALINT/: original_all_annotations.csv
intent-based-inoculation/: icot.py
intent-based-inoculation/utils/: analysis.py
prompts/: binary_intention_detection.yaml  binary_intention_detection_augmented_knowledge.yaml  multilabel_multiclass_classification.yaml  multilabel_multiclass_classification_augmented_knowledge.yaml
prompts/intent-based-inoculation/: ibi_final_step.yaml  intention_knowledge_infusion.yaml
src/: binary_detection.py  simple_detection_and_persuasion_step.py
src/ibi_and_llms/: binary_detection.py  icot.py
src/slms/: binary_classification.py  binary_hyperparameter_tuning.py  intent_classification.py  intent_hyperparameter_tuning.py  predict_binary.py  predict_multilabel.py
src/slms/config/: config.yaml  config_CPV.yaml  config_PASV.yaml  config_PSSA.yaml  config_UCPI.yaml  config_UIOA.yaml
src/slms/utils/: custom_callbacks.py  utils.py
src/utils/: utils.py
