[project]
name = "malint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "google-generativeai>=0.8.4",
    "google>=3.0.0",
    "jupyter>=1.1.1",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "scikit-learn>=1.6.1",
    "openpyxl>=3.1.5",
    "datasets>=3.6.0",
    "transformers[torch]>=4.52.4",
    "tiktoken>=0.9.0",
    "sentencepiece>=0.2.0",
]
